# BOB

./: .gitignore  .gitmodules  Makefile  README.md  citation.cff  pyproject.toml
src/BOB/: __init__.py  logger.py  napari.yaml  prompt_generator.py
src/BOB/checkpoints/: checkpoints.py
src/BOB/checkpoints/D-FINE-N/: log.txt
src/BOB/checkpoints/D-FINE-N/summary/: bbox_loss.csv  mAP50-95.csv  mAP50.csv
src/BOB/checkpoints/YOLOv12n/: args.yaml  results.csv
src/BOB/inference/: dfine_inference.py  dfine_onnx.py  utils.py  yolo_style_predictor.py
src/BOB/napari/: napari_widget.py  presets.py  reader_extensions.py  runner_threads.py
src/BOB/predictors/: BaseSegmenter.py  medsam_3d.py  nnInteractive_3d.py  sam2_2d.py  sam2_3d.py
src/BOB/train/: README.md  convert_datasets.py  dataset_converter.py
src/BOB/train/dfine/: README.md  convert_to_state_dict.py  dfine_dataset_config.yml  dfine_hgnetv2_n_custom.yml  dfine_hgnetv2_s_custom.yml  plot_results.py  yolo_to_coco_label.py
src/BOB/train/yolo/: dataset.yaml  train_yolov12n.py  verify_yolo_labels.py
