[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "BOB"
version = "1.0.0"
description = "Bounding-box Oracle for Biomedicine - A box prompt generation model including a napari plugin for interactive medical image segmentation."
readme = "README.md"
license = {text = "BSD-3-Clause"}
authors = [
    {name = "David Lurz", email = "david.lurz@fau.de"},
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Framework :: napari",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Testing",
]
requires-python = ">=3.8"
dependencies = [
    "torch>=1.8.0",
    "ultralytics",
    "onnxruntime",
    "medvol",
    "napari[all]>=0.4.15",
    "numpy",
    "qtpy",
]

[project.optional-dependencies]
video = [
    "imageio[ffmpeg]>=2.22.0",
]
training = [
    "pandas",
    "matplotlib",
    "tensorboard",
]
testing = [
    "pytest",
    "pytest-cov",
    "pytest-qt",
]


[project.urls]
"Bug Reports" = "https://github.com/DavidL-11/segFM/issues"
"Documentation" = "https://github.com/DavidL-11/segFM/blob/main/src/segFM/BOB/README.md"
"Source Code" = "https://github.com/DavidL-11/segFM/tree/main/src/segFM/BOB"
"User Support" = "https://github.com/DavidL-11/segFM/issues"

[project.entry-points."napari.manifest"]
BOB = "BOB:napari.yaml"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
BOB = "src/BOB"

[tool.black]
line-length = 79
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.isort]
profile = "black"
line_length = 79